tools/path_stubs.h

/* Avoid fortified libc wrappers that zig translate-c cannot handle */
int printf(const char *fmt, ...);
int snprintf(char *buf, unsigned long n, const char *fmt, ...);
char *getenv(const char *name);
void free(void *p);
void *memcpy(void *d, const void *s, unsigned long n);
void *memset(void *s, int c, unsigned long n);
int strcmp(const char *a, const char *b);
unsigned long strlen(const char *s);
typedef int64_t off_t;
typedef uint64_t ino_t;
#define _(s) (s)
#define sz(a) (a), slen(a)
/* Darwin/macOS arm64 struct stat (size 144) */
struct timespec_joe {
	time_t tv_sec;
	long tv_nsec;
};
struct stat {
	unsigned int st_dev;		/* 0 */
	unsigned short st_mode;		/* 4 */
	unsigned short st_nlink;	/* 6 */
	ino_t st_ino;			/* 8 */
	unsigned int st_uid;		/* 16 */
	unsigned int st_gid;		/* 20 */
	unsigned int st_rdev;		/* 24 */
	unsigned int _pad_rdev;		/* 28 */
	struct timespec_joe st_atimespec; /* 32 */
	struct timespec_joe st_mtimespec; /* 48 */
	struct timespec_joe st_ctimespec; /* 64 */
	struct timespec_joe st_birthtimespec; /* 80 */
	int64_t st_size;		/* 96 */
	int64_t st_blocks;		/* 104 */
	int st_blksize;			/* 112 */
	unsigned int st_flags;		/* 116 */
	unsigned int st_gen;		/* 120 */
	int st_lspare;			/* 124 */
	int64_t st_qspare[2];		/* 128 */
};
int stat(const char *path, struct stat *buf);
/* JOE variable strings / arrays */
ptrdiff_t slen(const char *s);
char *vsmk(ptrdiff_t len);
void vsrm(char *s);
char *vsadd(char *s, char c);
char *vsncpy(char *d, ptrdiff_t dlen, const char *s, ptrdiff_t sl);
void joe_free(void *p);
void varm(char **a);
char **vawords(char **a, const char *s, ptrdiff_t sl, const char *sep, ptrdiff_t sepl);