tools/scrn_stubs.h

typedef void FILE;
struct cap {
	char *tbuf;
	struct sortentry *sort;
	ptrdiff_t sortlen;
	char *abuf;
	char *abufp;
	long div;
	long baud;
	const char *pad;
	void (*out)(void *, char);
	void *outptr;
	int dopadding;
};
typedef struct cap CAP;
void *joe_malloc(ptrdiff_t size);
void *joe_realloc(void *ptr, ptrdiff_t size);
void *mmove(void *d, const void *s, ptrdiff_t sz);
CAP *setcap(CAP *cap, long baud, void (*out)(void *, char), void *outptr);
int ztoi(const char *s);