tools/state_stubs.h

char *fgets(char *s, int n, void *f);
void *fopen(const char *path, const char *mode);
int fclose(void *f);
struct b;
 typedef struct b B;
struct p;
 typedef struct p P;
struct p {
	LINK(P) link;
	B *b;
	char _pad0[24];
	off_t byte;
	off_t line;
	off_t col;
	off_t xcol;
	int valcol;
	int end;
	int attr;
	int valattr;
	P **owner;
	const char *tracker;
};
struct b {
	LINK(B) link;
	P *bof;
	P *eof;
	char _pad[600];
};