src/termcap.zig


pub extern fn printf(fmt: [*c]const u8, ...) c_int;
pub extern fn snprintf(buf: [*c]u8, n: c_ulong, fmt: [*c]const u8, ...) c_int;
pub extern fn getenv(name: [*c]const u8) [*c]u8;
pub extern fn free(p: ?*anyopaque) void;
pub extern fn memcpy(d: ?*anyopaque, s: ?*const anyopaque, n: c_ulong) ?*anyopaque;
pub extern fn memset(s: ?*anyopaque, c: c_int, n: c_ulong) ?*anyopaque;
pub extern fn strcmp(a: [*c]const u8, b: [*c]const u8) c_int;
pub extern fn strlen(s: [*c]const u8) c_ulong;
pub const off_t = i64;
pub const FILE = anyopaque;
pub const struct_stat = extern struct {
    st_mtime: c_long = 0,
    _pad: [128]u8 = std.mem.zeroes([128]u8),
};
pub const struct_sortentry = extern struct {
    name: [*c]u8 = null,
    value: [*c]u8 = null,
};
pub const struct_cap = extern struct {
    tbuf: [*c]u8 = null,
    sort: [*c]struct_sortentry = null,
    sortlen: ptrdiff_t = 0,
    abuf: [*c]u8 = null,
    abufp: [*c]u8 = null,
    div: c_long = 0,
    baud: c_long = 0,
    pad: [*c]const u8 = null,
    out: ?*const fn (?*anyopaque, u8) callconv(.c) void = null,
    outptr: ?*anyopaque = null,
    dopadding: c_int = 0,
};
pub const CAP = struct_cap;
pub extern fn joe_malloc(size: ptrdiff_t) ?*anyopaque;
pub extern fn joe_realloc(ptr: ?*anyopaque, size: ptrdiff_t) ?*anyopaque;
pub extern fn joe_free(ptr: ?*anyopaque) void;
pub extern fn mmove(d: ?*anyopaque, s: ?*const anyopaque, sz: ptrdiff_t) ?*anyopaque;
pub extern fn ztoi(s: [*c]const u8) c_int;
pub extern fn zhtoi(s: [*c]const u8) c_int;
pub extern fn slen(ary: [*c]const u8) ptrdiff_t;
pub extern fn vsmk(len: ptrdiff_t) [*c]u8;
pub extern fn vsrm(vary: [*c]u8) void;
pub extern fn vstrunc(vary: [*c]u8, len: ptrdiff_t) [*c]u8;
pub extern fn vsncpy(vary: [*c]u8, pos: ptrdiff_t, array: [*c]const u8, len: ptrdiff_t) [*c]u8;
pub extern fn vsset(vary: [*c]u8, pos: ptrdiff_t, el: u8) [*c]u8;
pub extern fn vsadd(vary: [*c]u8, el: u8) [*c]u8;
pub extern fn vawords(a: [*c][*c]u8, s: [*c]const u8, len: ptrdiff_t, sep: [*c]const u8, seplen: ptrdiff_t) [*c][*c]u8;
pub extern fn varm(vary: [*c][*c]u8) void;
pub extern fn fopen(path: [*c]const u8, mode: [*c]const u8) ?*FILE;
pub extern fn fclose(stream: ?*FILE) c_int;
pub extern fn fgets(s: [*c]u8, n: c_int, stream: ?*FILE) [*c]u8;
pub extern fn getc(stream: ?*FILE) c_int;
pub extern fn ungetc(c: c_int, stream: ?*FILE) c_int;
pub extern fn fseek(stream: ?*FILE, offset: c_long, whence: c_int) c_int;
pub extern fn fseeko(stream: ?*FILE, offset: off_t, whence: c_int) c_int;
pub extern fn fstat(fd: c_int, buf: [*c]struct_stat) c_int;
pub extern fn fileno(stream: ?*FILE) c_int;
pub extern fn stat(path: [*c]const u8, buf: [*c]struct_stat) c_int;
pub export fn my_getcap(arg_name: [*c]u8, arg_baud: c_long, arg_out: ?*const fn (?*anyopaque, u8) callconv(.c) void, arg_outptr: ?*anyopaque) [*c]CAP {
    var name = arg_name;
    _ = &name;
    var baud = arg_baud;
    _ = &baud;
    var out = arg_out;
    _ = &out;
    var outptr = arg_outptr;
    _ = &outptr;
    var cap_1: [*c]CAP = undefined;
    _ = &cap_1;
    var f: ?*FILE = undefined;
    _ = &f;
    var f1: ?*FILE = undefined;
    _ = &f1;
    var idx: off_t = undefined;
    _ = &idx;
    var c: c_int = undefined;
    _ = &c;
    var ti: ptrdiff_t = undefined;
    _ = &ti;
    var x: ptrdiff_t = undefined;
    _ = &x;
    var y: ptrdiff_t = undefined;
    _ = &y;
    var z: ptrdiff_t = undefined;
    _ = &z;
    var tp: [*c]u8 = undefined;
    _ = &tp;
    var pp: [*c]u8 = undefined;
    _ = &pp;
    var qq: [*c]u8 = undefined;
    _ = &qq;
    var namebuf: [*c]u8 = undefined;
    _ = &namebuf;
    var npbuf: [*c][*c]u8 = undefined;
    _ = &npbuf;
    var idxname: [*c]u8 = undefined;
    _ = &idxname;
    var sortsiz: c_int = undefined;
    _ = &sortsiz;
    var from_env: c_int = undefined;
    _ = &from_env;
    if ((!(name != null) and !((blk: {
        const tmp = joeterm;
        name = tmp;
        break :blk tmp;
    }) != null)) and !((blk: {
        const tmp = getenv("TERM");
        name = tmp;
        break :blk tmp;
    }) != null)) return null;
    cap_1 = @ptrCast(@alignCast(joe_malloc(@as(ptrdiff_t, @bitCast(@as(c_ulong, @truncate(@sizeOf(CAP))))))));
    cap_1.*.tbuf = vsmk(4096);
    cap_1.*.abuf = null;
    cap_1.*.sort = null;
    name = vsncpy(null, 0, name, @as(ptrdiff_t, @bitCast(@as(c_ulong, @truncate(strlen(name))))));
    cap_1.*.sort = @ptrCast(@alignCast(joe_malloc(@as(ptrdiff_t, @bitCast(@as(c_ulong, @truncate(@sizeOf(struct_sortentry))))) * @as(ptrdiff_t, blk: {
        const tmp = @as(c_int, 64);
        sortsiz = tmp;
        break :blk tmp;
    }))));
    cap_1.*.sortlen = 0;
    tp = getenv("TERMCAP");
    if ((tp != null) and (@as(c_int, tp[@as(c_int, 0)]) == @as(c_int, '/'))) {
        namebuf = vsncpy(null, 0, tp, @as(ptrdiff_t, @bitCast(@as(c_ulong, @truncate(strlen(tp))))));
    } else {
        if (tp != null) {
            cap_1.*.tbuf = vsncpy(cap_1.*.tbuf, if (cap_1.*.tbuf != null) (@as([*c]ptrdiff_t, @ptrCast(@alignCast(cap_1.*.tbuf))) - @as(usize, @as(usize, @intCast(@as(c_int, 1))))).* else @as(ptrdiff_t, 0), tp, @as(ptrdiff_t, @bitCast(@as(c_ulong, @truncate(strlen(tp))))));
        }
        if ((blk: {
            const tmp = getenv("TERMPATH");
            tp = tmp;
            break :blk tmp;
        }) != null) {
            namebuf = vsncpy(null, 0, tp, @as(ptrdiff_t, @bitCast(@as(c_ulong, @truncate(strlen(tp))))));
        } else {
            if ((blk: {
                const tmp = getenv("HOME");
                tp = tmp;
                break :blk tmp;
            }) != null) {
                namebuf = vsncpy(null, 0, tp, @as(ptrdiff_t, @bitCast(@as(c_ulong, @truncate(strlen(tp))))));
                namebuf = vsadd(namebuf, '/');
            } else {
                namebuf = null;
            }
            namebuf = vsncpy(namebuf, if (namebuf != null) (@as([*c]ptrdiff_t, @ptrCast(@alignCast(namebuf))) - @as(usize, @as(usize, @intCast(@as(c_int, 1))))).* else @as(ptrdiff_t, 0), ".termcap ", @as(ptrdiff_t, @bitCast(@as(c_ulong, @truncate((@sizeOf(@TypeOf(".termcap ".*)) / @sizeOf(u8)) -% @as(c_ulong, 1))))));
            namebuf = vsncpy(namebuf, if (namebuf != null) (@as([*c]ptrdiff_t, @ptrCast(@alignCast(namebuf))) - @as(usize, @as(usize, @intCast(@as(c_int, 1))))).* else @as(ptrdiff_t, 0), "", @as(ptrdiff_t, @bitCast(@as(c_ulong, @truncate((@sizeOf(@TypeOf("".*)) / @sizeOf(u8)) -% @as(c_ulong, 1))))));
            namebuf = vsncpy(namebuf, if (namebuf != null) (@as([*c]ptrdiff_t, @ptrCast(@alignCast(namebuf))) - @as(usize, @as(usize, @intCast(@as(c_int, 1))))).* else @as(ptrdiff_t, 0), "termcap /etc/termcap", @as(ptrdiff_t, @bitCast(@as(c_ulong, @truncate((@sizeOf(@TypeOf("termcap /etc/termcap".*)) / @sizeOf(u8)) -% @as(c_ulong, 1))))));
        }
    }
    npbuf = vawords(null, namebuf, if (namebuf != null) (@as([*c]ptrdiff_t, @ptrCast(@alignCast(namebuf))) - @as(usize, @as(usize, @intCast(@as(c_int, 1))))).* else @as(ptrdiff_t, 0), "\t :", @as(ptrdiff_t, @bitCast(@as(c_ulong, @truncate((@sizeOf(@TypeOf("\t :".*)) / @sizeOf(u8)) -% @as(c_ulong, 1))))));
    vsrm(namebuf);
    y = 0;
    ti = 0;
    from_env = match(cap_1.*.tbuf, name);
    if (!(from_env != 0)) {
        cap_1.*.tbuf = vstrunc(cap_1.*.tbuf, 0);
    }
    while (true) {
        if (!(from_env != 0)) {
            if (!(npbuf[@as(usize, @intCast(y))] != null)) {
                _ = @constCast("Couldn't load termcap entry.  Using ansi default\n");
                ti = 0;
                cap_1.*.tbuf = vsncpy(cap_1.*.tbuf, 0, @ptrCast(@alignCast(&defentry)), @as(ptrdiff_t, @bitCast(@as(c_ulong, @truncate((@sizeOf(@TypeOf(defentry)) / @sizeOf(u8)) -% @as(c_ulong, 1))))));
            } else {
                idx = 0;
                idxname = vsncpy(null, 0, npbuf[@as(usize, @intCast(y))], @as(ptrdiff_t, @bitCast(@as(c_ulong, @truncate(strlen(npbuf[@as(usize, @intCast(y))]))))));
                idxname = vsncpy(idxname, if (idxname != null) (@as([*c]ptrdiff_t, @ptrCast(@alignCast(idxname))) - @as(usize, @as(usize, @intCast(@as(c_int, 1))))).* else @as(ptrdiff_t, 0), ".idx", @as(ptrdiff_t, @bitCast(@as(c_ulong, @truncate((@sizeOf(@TypeOf(".idx".*)) / @sizeOf(u8)) -% @as(c_ulong, 1))))));
                f1 = fopen(npbuf[@as(usize, @intCast(y))], "r");
                y += 1;
                if (!(f1 != null)) continue;
                f = fopen(idxname, "r");
                if (f != null) {
                    var buf: struct_stat = undefined;
                    _ = &buf;
                    var buf1: struct_stat = undefined;
                    _ = &buf1;
                    _ = fstat(fileno(f), &buf);
                    _ = fstat(fileno(f1), &buf1);
                    if (buf.st_mtime > buf1.st_mtime) {
                        idx = findidx(f, name);
                    } else {
                        _ = @constCast("termcap: %s is out of date\n");
                        _ = &idxname;
                    }
                    _ = fclose(f);
                }
                vsrm(idxname);
                _ = fseek(f1, @truncate(idx), 0);
                cap_1.*.tbuf = lfind(cap_1.*.tbuf, ti, f1, name);
                _ = fclose(f1);
                if ((if (cap_1.*.tbuf != null) (@as([*c]ptrdiff_t, @ptrCast(@alignCast(cap_1.*.tbuf))) - @as(usize, @as(usize, @intCast(@as(c_int, 1))))).* else @as(ptrdiff_t, 0)) == ti) continue;
            }
        }
        from_env = 0;
        x = if (cap_1.*.tbuf != null) (@as([*c]ptrdiff_t, @ptrCast(@alignCast(cap_1.*.tbuf))) - @as(usize, @as(usize, @intCast(@as(c_int, 1))))).* else @as(ptrdiff_t, 0);
        while (true) {
            cap_1.*.tbuf[@as(usize, @intCast(x))] = 0;
            while ((x != 0) and (@as(ptrdiff_t, @intFromBool(@as(c_int, cap_1.*.tbuf[
                @bitCast(@as(isize, @intCast(blk: {
                    const ref = &x;
                    ref.* -= 1;
                    break :blk ref.*;
                })))
            ]) != @as(c_int, ':'))) != 0)) {}
            if (!((x != 0) and (@as(ptrdiff_t, @intFromBool(!(@as(c_int, cap_1.*.tbuf[@as(usize, @intCast(x + @as(ptrdiff_t, 1)))]) != 0) or (@as(c_int, cap_1.*.tbuf[@as(usize, @intCast(x + @as(ptrdiff_t, 1)))]) == @as(c_int, ':')))) != 0))) break;
        }
        if (((@as(c_int, cap_1.*.tbuf[@as(usize, @intCast(x + @as(ptrdiff_t, 1)))]) == @as(c_int, 't')) and (@as(c_int, cap_1.*.tbuf[@as(usize, @intCast(x + @as(ptrdiff_t, 2)))]) == @as(c_int, 'c'))) and (@as(c_int, cap_1.*.tbuf[@as(usize, @intCast(x + @as(ptrdiff_t, 3)))]) == @as(c_int, '='))) {
            name = vsncpy(null, 0, (cap_1.*.tbuf + @as(usize, @as(usize, @intCast(x)))) + @as(usize, @as(usize, @intCast(@as(c_int, 4)))), @as(ptrdiff_t, @bitCast(@as(c_ulong, @truncate(strlen((cap_1.*.tbuf + @as(usize, @as(usize, @intCast(x)))) + @as(usize, @as(usize, @intCast(@as(c_int, 4))))))))));
            cap_1.*.tbuf[@as(usize, @intCast(x))] = 0;
            cap_1.*.tbuf[@as(usize, @intCast(x + @as(ptrdiff_t, 1)))] = 0;
            ti = x + @as(ptrdiff_t, 1);
            (@as([*c]ptrdiff_t, @ptrCast(@alignCast(cap_1.*.tbuf))) - @as(usize, @as(usize, @intCast(@as(c_int, 1))))).* = x + @as(ptrdiff_t, 1);
            if (y != 0) {
                y -= 1;
            }
            continue;
        }
        while (true) {
            pp = cap_1.*.tbuf + @as(usize, @as(usize, @intCast(ti)));
            while (@as(c_int, pp.*) != 0) {
                while ((@as(c_int, pp.*) != 0) and (@as(c_int, pp.*) != @as(c_int, ':'))) {
                    pp += 1;
                }
                if (!(@as(c_int, pp.*) != 0)) break;
                (blk: {
                    const ref = &pp;
                    const tmp = ref.*;
                    ref.* += 1;
                    break :blk tmp;
                }).* = 0;
                while (true) {
                    var q: c_int = undefined;
                    _ = &q;
                    var found_existing: c_int = undefined;
                    _ = &found_existing;
